@@ -4,6 +4,9 @@ Changes log
 ===========
 
 - @version-full@ (@release-date@)
+    - Bug fixed
+      - Fixed issue #818: Call.isBroken does not detect Tomcat ClientAbortException.
+        Reported and contributed by Jeremy Gustie.
 
 - 2.2 Release Candidate 2 (02/18/2014)
     - Enhancements
